--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "aos": "^2.3.4",
     "astro": "^5.7.4",
     "express": "^5.1.0"
+  },
+  "devDependencies": {
+    "sharp": "^0.34.1"
   }
 }
