--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Ramón Gracia - Desarrollador Web & Arquitecto de Software",
   "short_name": "Ramón Gracia",
-  "description": "Portfolio profesional de Ramón Gracia, desarrollador de software con experiencia en Vue.js, Angular, React, .NET y desarrollo web full-stack",
+  "description": "Portafolio profesional de Ramón Gracia, desarrollador de software con experiencia en Vue.js, Angular, React, .NET y desarrollo web full-stack",
   "start_url": "/",
   "display": "standalone",
   "background_color": "#ffffff",
